--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
-
+apply plugin:"kotlin-android"
+apply plugin:"kotlin-android-extensions"
+apply plugin: "kotlin-kapt"
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
